--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   # localstack home: https://github.com/localstack/localstack
   ###
   localstack:
-    image: localstack/localstack:1.3.1
+    image: localstack/localstack:latest
     ports:
       - 4566:4566
     expose:
@@ -12,7 +12,7 @@ services:
     networks:
       demo:
         aliases:
-          - test-bucket.localstack
+          - test-bucket.s3.localhost.localstack.cloud
     environment:
       PROVIDER_OVERRIDE_S3: asf
       EAGER_SERVICE_LOADING: 1
@@ -28,9 +28,7 @@ services:
       - 8088
     networks:
       demo:
-        aliases:
-          - test-bucket.localstack
     environment:
-      S3_ENDPOINT_OVERRIDE: http://localstack:4566
+      S3_ENDPOINT_OVERRIDE: http://s3.localhost.localstack.cloud:4566
 networks:
   demo:
