--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 s3.bucket=test-bucket
 s3.region=us-east-1
-s3.endpoint-override=http://localhost.localstack.cloud:4566
+s3.endpoint-override=http://s3.localhost.localstack.cloud:4566
