--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-s3.bucket=test-bucket
-s3.region=us-east-1
+aws.s3.bucket=test-bucket
+aws.s3.region=us-east-1
 # Should work, but fails with CRT Client
-#s3.endpoint-override=http://s3.localhost.localstack.cloud:4566
-s3.endpoint-override=http://s3.localhost.localstack.cloud:8181
+aws.s3.client.endpoint-override=http://s3.localhost.localstack.cloud:4566
+# Workaround using nginx to add port to Host header
+#aws.s3.client.endpoint-override=http://s3.localhost.localstack.cloud:8181
+# FIXME: uncomment the next line to use the crt client
+aws.s3.client.type=crt
