--- a/docker-compose/docker-compose-minimal.yaml
+++ b/docker-compose/docker-compose-minimal.yaml
@@ -4,18 +4,16 @@ services:
   # localstack home: https://github.com/localstack/localstack
   ###
   localstack:
-    # image: local/localstack:1.3.2.dev0
     image: localstack/localstack:latest
     ports:
       - 4566:4566
     expose:
       - 4566
     networks:
-      curl:
+      bug:
     environment:
       PROVIDER_OVERRIDE_S3: asf
       EAGER_SERVICE_LOADING: 1
       SERVICES: s3
-      DEBUG: ${DEBUG_LOCALSTACK:-0}
 networks:
-  curl:
+  bug:
