Upgrade AWS SDK to 2.20.4.  Refactor AsyncClient producer.

--- a/docker-compose/docker-compose-minimal.yaml
+++ b/docker-compose/docker-compose-minimal.yaml
@@ -4,7 +4,7 @@ services:
   # localstack home: https://github.com/localstack/localstack
   ###
   localstack:
-    image: localstack/localstack:latest
+    image: localstack/localstack:${LOCALSTACK_VERSION}
     ports:
       - 4566:4566
     expose:
