--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
         <quarkus.platform.version>2.15.2.Final</quarkus.platform.version>
         <skipITs>true</skipITs>
         <surefire-plugin.version>3.0.0-M7</surefire-plugin.version>
-        <aws.sdk.version>2.19.12</aws.sdk.version>
-        <aws.sdk.crt.version>0.21.0</aws.sdk.crt.version>
+        <aws.sdk.version>2.20.4</aws.sdk.version>
+        <!--<aws.sdk.crt.version>0.21.0</aws.sdk.crt.version>-->
         <checkstyle.version>10.5.0</checkstyle.version>
     </properties>
     <dependencyManagement>
@@ -52,12 +52,11 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
-            <artifactId>s3-transfer-manager</artifactId>
+            <artifactId>aws-crt-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>software.amazon.awssdk.crt</groupId>
-            <artifactId>aws-crt</artifactId>
-            <version>${aws.sdk.crt.version}</version>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>s3-transfer-manager</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jboss.slf4j</groupId>
